--- a/main/privacy-policy.html
+++ b/main/privacy-policy.html
@@ -19,7 +19,7 @@
             EngagePadi Privacy Policy
           </h1>
           <p class="text-sm sm:text-base text-gray-400 font-medium">
-            Last Updated: <span class="text-blue-400">9th February 2026</span>
+            Last Updated: <span class="text-blue-400">February 9, 2026</span>
           </p>
         </header>
 
